sort.pancake.BasicPancake.scala.error
Compilation error:
BasicPancake:3: error: not found: value n
  n= getStackSize();
  ^BasicPancake:5: error: not enough arguments for method flip: (x$1: Int)Unit.
Unspecified value parameter x$1.
    flip()
        ^