sort.pancake.BasicPancake.scala.code
def solve() {
  n= getStackSize();
  while (!isSorted) {
    flip()
  }
}